# easy_license

./: .gitignore  lictool.py  pyproject.toml  readme.md
src/easy_license/: __init__.py  client.py  common.py  license.py  server.py
tests/: test_client.py  test_common.py  test_easy.py  test_license.py
