[project]
name = "easy-license"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
authors = [
    { name = "Florin Ciurcanu", email = "florin.ciurcanu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
easy-license = "easy_license:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
